--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Juego Adivina el Número</title>
+  <title>Juego: Adivina el Número</title>
 
-  #Brython 
+  <!-- Brython y su biblioteca estándar -->
   <script src="https://cdn.jsdelivr.net/npm/brython@3.11.3/brython.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/brython@3.11.3/brython_stdlib.js"></script>
 
-  #Styling
+  <!-- Styling -->
   <style>
     body {
       font-family: 'Fira Code', monospace;
@@ -49,7 +49,7 @@
     }
 
     input[type="text"] {
-      width: calc(100% - 100px);
+      width: calc(100% - 100px); <!-- Ocupa casi todo el ancho disponible menos 100px para dejar espacio al botón -->
       padding: 0.5rem;
       background-color: #252526;
       border: 1px solid #333;
@@ -69,6 +69,7 @@
       cursor: pointer;
     }
 
+    <!-- Cambia el color cuando pasas el ratón por encima -->
     button:hover {
       background-color: #1177bb;
     }
@@ -79,10 +80,13 @@
     }
   </style>
 </head>
+
+<!-- Inicia Brython -->
 <body onload="brython()">
 
-  <h1>Adivina el Número</h1>
 
+  <!-- Contenido visual -->
+  <h1>Adivina el Número</h1>
   <div class="vscode-box">
     <div id="output"></div>
     <div class="input-group">
@@ -95,4 +99,5 @@
 
 </body>
 </html>
+
 
